<resources>
    <!-- General Usage -->
    <string name="app_name">Service Request System</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="general_cancel_title">Cancel</string>
    <string name="general_submit_title">Submit</string>
    <string name="default_service_title">Vendors</string>
    <string name="general_back_title">Go Back</string>

    <!-- Login Screen Main Buttons -->
    <string name="user_login_button">Login</string>
    <string name="user_register_button">Register</string>
    <string name="guest_button"><u>Continue as Guest</u></string>

    <!-- Login Screen Login -->
    <string name="login_welcome_title">Welcome Back!</string>
    <string name="login_id_hint">User ID</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password_title"><u>Forgot Password</u></string>

    <!-- Login Screen Forgot Password -->
    <string name="login_forgot_pass_title">Forgot Password</string>
    <string name="login_forgot_pass_desc">Enter in the information below along with your new password in order to verify your account. If the information is correct, we will reset your password and take you back to the login screen.</string>
    <string name="login_forgot_pass_id_title">Account UserID</string>
    <string name="login_forgot_pass_email_title">Account Email</string>
    <string name="login_forgot_pass_phone_title">Account Phone</string>
    <string name="login_forgot_pass_password_title">New Password</string>

    <!-- User and Vendor Registration -->
    <string name="user_reg_title">User Registration</string>
    <string name="vendor_reg_title">Vendor Registration</string>
    <string name="reg_profile_section_title">Profile Information</string>
    <string name="reg_name_title">First &amp; Last Name</string>
    <string name="reg_email_title">Email Address</string>
    <string name="reg_phone_title">Phone Number</string>
    <string name="reg_address_title">Home Address</string>
    <string name="reg_city_title">City</string>
    <string name="reg_state_title">State</string>
    <string name="reg_zipcode_title">Zipcode</string>
    <string name="reg_login_section_title">Login Information</string>
    <string name="reg_id_title">User ID*</string>
    <string name="reg_id_hint">*ID must be at least 8 characters, alphanumeric, with no special characters.</string>
    <string name="reg_password_title">Password*</string>
    <string name="reg_password_hint">*Password must be at least 6 characters, with letters, and at least one digit, capital letter, and special character.</string>
    <string name="reg_vendor_section_title">Vendor Information</string>
    <string name="reg_compName_title">Company Name</string>
    <string name="reg_compEmail_title">Company Email</string>
    <string name="reg_compPhone_title">Company Phone</string>
    <string name="reg_compAddress_title">Company Address</string>
    <string name="reg_services_title">Select Services Provided</string>
    <string name="reg_services_charge_title">Charges per Hour*</string>
    <string name="reg_services_charge_hint">*For each service selected, enter your rate per hour, comma separated, in the same order your selected services are.</string>
    <string name="reg_vendor_fee_desc">I agree to pay a 20% fee from money received to the app owners.</string>

    <!-- Home Page Service Icons -->
    <string name="search_title">Search for Services…</string>
    <string name="appliance_title">Appliances</string>
    <string name="appliance_description">Appliance Service</string>
    <string name="electrical_title">Electrical</string>
    <string name="electrical_description">Electrical Service</string>
    <string name="plumbing_title">Plumbing</string>
    <string name="plumbing_description">Plumbing Service</string>
    <string name="home_cleaning_title">Home Cleaning</string>
    <string name="home_cleaning_description">Home Cleaning Service</string>
    <string name="tutoring_title">Tutoring</string>
    <string name="tutoring_description">Tutoring Service</string>
    <string name="moving_title">Packaging &amp; Moving</string>
    <string name="moving_description">Packaging &amp; Moving Service</string>
    <string name="computer_repair_title">Computer Repair</string>
    <string name="computer_repair_description">Computer Repair Service</string>
    <string name="home_repair_title">Home Repair &amp; Painting</string>
    <string name="home_repair_description">Home Repair &amp; Painting Service</string>
    <string name="pest_control_title">Pest Control</string>
    <string name="pest_control_description">Pest Control Service</string>

    <!-- Search Page -->
    <string name="search_filter_service_title">Service</string>
    <string name="search_filter_rating_title">Rating</string>
    <string name="search_filter_date_title">Date</string>
    <string name="search_filter_price_title">Price</string>
    <string name="search_search_title">Search</string>
    <string name="default_service_rate_title">Rate/Hour: </string>
    <string name="default_service_services_title">Service: </string>
    <string name="default_service_address_title">Address: </string>
    <string name="default_service_phone_title">Phone: </string>
    <string name="search_no_result_title">No results found with these parameters.</string>

    <!-- Service Request Page -->
    <string name="default_service_desc">This is a default description of a certain category of a service. This is used to test layouts and to visualize how it will look for the users. </string>
    <string name="service_request_instructions">To receive service, complete the form below. Vendors will review your request and offer their services.</string>
    <string name="service_estimated_price">Estimated Cost Avg: N/A</string>
    <string name="service_request_form_title">Service Request Form</string>
    <string name="service_request_form_input_desc_title">Description of Service Needed</string>
    <string name="service_request_form_input_time_title">Preferred Time</string>
    <string name="service_request_form_input_date_title">Preferred Date</string>
    <string name="service_request_form_input_other_title">Any Other Information</string>

    <!-- Dashboard Icons and Buttons -->
    <string name="dashboard_greeting_title">Hello, Firstname Lastname!</string>
    <string name="dashboard_user_rewards_title">Discounts: None | Points: 0</string>
    <string name="dashboard_user_logout_title">Logout</string>
    <string name="dashboard_login_register">Login/Register</string>
    <string name="dashboard_payment_title">Make Payments</string>
    <string name="dashboard_order_history">Order History</string>
    <string name="dashboard_request_history">Completed Requests</string>
    <string name="dashboard_current_requests">Current Requests</string>
    <string name="dashboard_add_dates">Available Dates</string>
    <string name="dashboard_rate_services">Rate Past Services</string>
    <string name="dashboard_view_reviews">View Reviews</string>

    <!-- Map Page Information -->
    <string name="map_failure_title">Unable to load the map at this time.</string>
    <string name="map_map_title">Map View</string>
    <string name="map_trip_info_title">Trip Information</string>
    <string name="map_open_btn_title">Open in Google Maps</string>
    <string name="map_map_btn_title">Map</string>

    <!-- Orders Information -->
    <string name="orders_page_title">Orders Information</string>
    <string name="orders_id_title">Request ID:</string>
    <string name="orders_vendor_title">Vendor:</string>
    <string name="orders_service_title">Service Requested:</string>
    <string name="orders_description_title">Description:</string>
    <string name="orders_datetime_title">Date &amp; Time:</string>
    <string name="orders_other_title">Other Info:</string>
    <string name="orders_cost_title">Cost: N/A</string>
    <string name="orders_status_title">Status:</string>
    <string name="orders_no_results_title">No orders found.</string>
    <string name="orders_card_btn_left">Left</string>
    <string name="orders_card_btn_right">Right</string>
    <string name="orders_your_requests_tab_title">Current Requests</string>
    <string name="orders_open_requests_tab_title">Available Requests</string>

    <!-- Rating Information -->
    <string name="rating_card_rating_input_title">Your Rating:</string>
    <string name="rating_card_comment_title">Optional Comment</string>
    <string name="rating_page_title">View Your Ratings</string>
    <string name="rating_overall_title">Overall Avg: </string>
    <string name="rating_customerID_title">From CustomerID</string>
    <string name="rating_customer_comment_title">\"Customer Comment.\"</string>
    <string name="rating_no_result_title">No ratings at this time.</string>
    <string name="rating_submit_button">Submit Rating</string>

    <!-- Add Dates Information -->
    <string name="dates_page_title">Your Available Dates</string>
    <string name="dates_add_remove_title">Add/Remove</string>
    <string name="dates_date_input_title">Date to add or remove</string>

    <!-- Settings Switches and Descriptions -->
    <string name="settings_sound">Sound</string>
    <string name="settings_notifs">Notifications</string>
    <string name="settings_location">Location</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_texts_emails">Sign up for texts/emails</string>
    <string name="settings_texts_emails_desc">Sign up for texts and emails about exciting offers and the latest updates.</string>
    <string name="settings_redeem">Redeem Points</string>
    <string name="settings_redeem_desc">Use your reward points to receive exclusive discounts and rewards.</string>

    <!-- Payment Page Strings -->
    <string name="payment_no_result_title">No orders found waiting on payment</string>
    <string name="payment_order_info_default_title">Request ID: \n\nVendor: \n\nDescription: \n\nDate &amp; Time: \n\nCost: \n\nTax: \n\nTotal: \n\nRewards Earned: \n</string>
    <string name="payment_info_title">Payment Information</string>
    <string name="card_number_title">Card Number</string>
    <string name="card_exp_date_title">Expiration MM/YY</string>
    <string name="card_cvv_title">CVV</string>
    <string name="submit_payment">Submit Payment</string>
    <string name="cancel_payment">Cancel</string>
</resources>