<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <SearchView
        android:id="@+id/search_for_service"
        android:layout_width="376dp"
        android:layout_height="26dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main"
        app:layout_constraintVertical_bias="0.037">

    </SearchView>

    <LinearLayout
        android:id="@+id/service_categories_grid"
        android:layout_width="375dp"
        android:layout_height="523dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_for_service">

        <LinearLayout
            android:id="@+id/service_btns_row_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="155dp">

            <LinearLayout
                android:id="@+id/appliance_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/service_buttons_padding">

                <ImageButton
                    android:id="@+id/appliance_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/appliance_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/appliance_icon" />

                <TextView
                    android:id="@+id/appliance_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/appliance_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/electrical_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/service_buttons_padding">

                <ImageButton
                    android:id="@+id/electrical_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/electrical_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/electrical_icon" />

                <TextView
                    android:id="@+id/electrical_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/electrical_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/plumbing_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/service_buttons_padding">

                <ImageButton
                    android:id="@+id/plumbing_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/plumbing_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/plumbing_icon" />

                <TextView
                    android:id="@+id/plumbing_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/plumbing_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/service_btns_row_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="155dp">

            <LinearLayout
                android:id="@+id/home_cleaning_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/service_buttons_padding">

                <ImageButton
                    android:id="@+id/home_cleaning_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/home_cleaning_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/home_cleaning_icon" />

                <TextView
                    android:id="@+id/home_cleaning_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/home_cleaning_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tutoring_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/service_buttons_padding">

                <ImageButton
                    android:id="@+id/tutoring_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/tutoring_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tutoring_icon" />

                <TextView
                    android:id="@+id/tutoring_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/tutoring_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/moving_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/service_buttons_padding">

                <ImageButton
                    android:id="@+id/moving_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/moving_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/moving_icon" />

                <TextView
                    android:id="@+id/moving_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/moving_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/service_btns_row_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="155dp">

            <LinearLayout
                android:id="@+id/computer_repair_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/service_buttons_padding">

                <ImageButton
                    android:id="@+id/computer_repair_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/computer_repair_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/computer_repair_icon" />

                <TextView
                    android:id="@+id/computer_repair_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/computer_repair_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_repair_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/service_buttons_padding">

                <ImageButton
                    android:id="@+id/home_repair_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/home_repair_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/home_repair_icon" />

                <TextView
                    android:id="@+id/home_repair_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/home_repair_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pest_control_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/service_buttons_padding">

                <ImageButton
                    android:id="@+id/pest_control_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/pest_control_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pest_control_icon" />

                <TextView
                    android:id="@+id/pest_control_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/pest_control_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>