<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/orders_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="?attr/colorOnPrimary"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/orders_card_info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/orders_card_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/orders_id_title"
                android:text="@string/orders_id_title"
                android:textColor="?android:attr/colorForeground"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orders_card_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/orders_service_title"
                android:text="@string/orders_service_title"
                android:textColor="?android:attr/colorForeground"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/orders_card_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/orders_description_title"
                android:text="@string/orders_description_title"
                android:textColor="?android:attr/colorForeground"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/orders_card_datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/orders_datetime_title"
                android:text="@string/orders_datetime_title"
                android:textColor="?android:attr/colorForeground"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/orders_card_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/orders_other_title"
                android:text="@string/orders_other_title"
                android:textColor="?android:attr/colorForeground"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/orders_card_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/orders_cost_title"
                android:text="@string/orders_cost_title"
                android:textColor="?android:attr/colorForeground"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/orders_card_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/orders_status_title"
                android:text="@string/orders_status_title"
                android:textColor="?android:attr/colorForeground"
                android:textStyle="bold|italic" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>