<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.team4.srs.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.team4.srs.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.team4.srs.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.team4.srs.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login"/>

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.team4.srs.ui.registration.RegistrationFragment"
        android:label="fragment_registration"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.team4.srs.ui.services.ServicesFragment"
        android:label="fragment_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.team4.srs.ui.payment.PaymentFragment"
        android:label="fragment_payment"
        tools:layout="@layout/fragment_payment"/>
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.team4.srs.ui.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />
</navigation>